# StopWatch

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  install.bash
include/: StopWatch.hpp
install/: install.bash
lib/: CMakeLists.txt
lib/include/: StopWatch.hpp
lib/src/: StopWatch.cpp
src/: StopWatch.cpp
test/: CMakeLists.txt  main.cpp  test.cpp
test/src/: import_test.cpp  stopwatch_test.cpp
